--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 
 AWS_ACCESS_KEY_ID=_your_aws_account_access_key_id_
 AWS_SECRET_ACCESS_KEY=_your_aws_account_secret_access_key_
+AWS_REGION=_your_aws_region
